# Civicverse

./: .gitignore  AI Protocol Integrity & The Fryboy Test.txt  Algorithmic Suppression and Platform Dynamics: A CivicVerse Case Study  CONTRIBUTING.md  CRAIG v2 Aggregator Key  Caddyfile  Cargo.toml  CivicVerse Resolution Doctrine: Final Non-Negotiable Terms of Alignment  CivicVerse Roadmap 25-35  CivicVerse_Autonomous_AI Video_Studio  Community notes  Conception  Core Local Framework  Cryptogachi  DEPLOY.md  Dockerfile  Encryption Key for Node Storage (ChaCha20)  FOUNDING-DECLARATION.md  Firestarter_v1.0  Genesis File Keys (Quest Engine Bootstrapping)  How AI Helped Me Take Over the World.  How AI Helped Me Take Over the World. (2).txt  Index.html  JWT Key (for Gateway UI)  README.md  RUNNING.md  Setup.sh  The Broken Nail  Web5  Web6  alpha2-README.md  assesetation-key  base64.ini  deploy.sh  docker-compose.yml  firestarter v1.0.txt  nternal API Signing Key (HMAC-256)  package-lock.json  package.json  public-base64.ini
.gitigore/: .gitignore
AI_Agent/: CRAIG_enforcer_logic.json  README.md
Arc/: Main.rs
CODE_OF_CONDUCT.md/: README.md
CONTRIBUTING.md/: README.md
White papers/: FOUNDING-DECLARATION.md  Firestarter_v1.0  Suppression Report  Web5
ai-governance-protocol/: FRYBOY_ALIGNMENT.md  FRYBOY_TECH_SPECS.md  README.md  checklist.json
backend/: Dockerfile  index.js  multiplayer-server.js  package-lock.json  package.json
craig-v2/: package-lock.json
docs/: deployment-statement.md  index.md  protocol-integrity-doctrine.md  quick-access.md
game/: README.md
(+157 files in other folders)
