[package]
name = "civic-node"
version = "0.1.0"
edition = "2021"
authors = ["Civicverse <dev@civicverse.example>"]
description = "Civicverse minimal working node: libp2p networking, attestation, CRAIG v2 aggregator"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.53", default-features = false, features = ["tcp-tokio", "websocket", "mdns", "gossipsub", "identify", "noise", "tcp"] }
ed25519-dalek = { version = "1.0", features = ["std"] }
rand = "0.8"
base64 = "0.21"
hex = "0.4"
clap = { version = "4.3", features = ["derive"] }
